maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:89: error: illegal start of simple expression
    if (getIndication(X+1,Y)==9999))
                                   ^